--- a/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsNavMenu.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/Shared/SettingsNavMenu.razor
@@ -1,3 +1,4 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="@ClientRoutes.Settings.Index" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.DisplaySettings">مشخصات گالری</MudNavLink>
+    <MudNavLink Href="@ClientRoutes.Settings.Index" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.DisplaySettings">اطلاعات پایه</MudNavLink>
+    <MudNavLink Href="@ClientRoutes.ProductCategories.Index" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category">دسته بندی اجناس</MudNavLink>
 </MudNavMenu>
