--- a/src/App/Client/GoldEx.Client/Pages/Settings/Components/Categories/Remove.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/Components/Categories/Remove.razor
@@ -6,6 +6,24 @@
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">لغو</MudButton>
-        <MudButton Color="@Color.Error" Variant="Variant.Filled" OnClick="OnValidSubmit" EndIcon="@Icons.Material.Filled.Delete">حذف</MudButton>
+        <MudButton Class="m-3"
+                   Color="Color.Error"
+                   Disabled="@_processing"
+                   OnClick="@(async () => await OnValidSubmit())"
+                   Variant="Variant.Filled">
+            @if (_processing)
+            {
+                <MudProgressCircular Class="ms-n1"
+                                     Size="Size.Small"
+                                     Indeterminate="true" />
+                <MudText Class="ms-2">
+                    در حال حذف
+                </MudText>
+            }
+            else
+            {
+                <MudText>حذف</MudText>
+            }
+        </MudButton>
     </DialogActions>
 </MudDialog>
