Add Customer list with Customer Creation page

--- a/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
@@ -41,7 +41,9 @@
                 <MudTabPanel Text="اجناس من" Icon="@Icons.Material.Filled.Warehouse">
                     <ProductsList Class="mt-2" Elevation="4" />
                 </MudTabPanel>
-                <MudTabPanel Text="مشتریان" Icon="@Icons.Material.Filled.PeopleAlt"></MudTabPanel>
+                <MudTabPanel Text="مشتریان" Icon="@Icons.Material.Filled.PeopleAlt">
+                    <CustomersList Class="mt-2" Elevation="4" />
+                </MudTabPanel>
                 <MudTabPanel Text="فاکتورهای من"></MudTabPanel>
                 <MudTabPanel Text="گزارش گیری"></MudTabPanel>
                 <MudTabPanel Text="اجناس فروخته شده"></MudTabPanel>
