--- a/src/App/Client/GoldEx.Client/_Imports.razor
+++ b/src/App/Client/GoldEx.Client/_Imports.razor
@@ -20,3 +20,5 @@
 @using GoldEx.Client.Pages.Products.ViewModels
 @using GoldEx.Shared.Enums
 @using GoldEx.Client.Pages.Calculate.Components
+@using GoldEx.Client.Pages.Customers.Components
+@using GoldEx.Client.Pages.Customers.ViewModels
