--- a/src/App/Client/GoldEx.Client/_Imports.razor
+++ b/src/App/Client/GoldEx.Client/_Imports.razor
@@ -22,3 +22,5 @@
 @using GoldEx.Client.Pages.Calculate.Components
 @using GoldEx.Client.Pages.Customers.Components
 @using GoldEx.Client.Pages.Customers.ViewModels
+@using GoldEx.Client.Pages.Transactions.Components
+
