--- a/src/App/Client/GoldEx.Client/Pages/Transactions/Components/CreateTransaction.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Transactions/Components/CreateTransaction.razor
@@ -1,4 +1,6 @@
-﻿<MudCard Elevation="4">
+﻿@inherits GoldExComponentBase
+
+<MudCard Elevation="4">
     <MudCardContent>
         <div class="d-flex align-center justify-content-between">
             <MudText Typo="Typo.h6" GutterBottom="true">مشخصات مشتری</MudText>
@@ -24,15 +26,20 @@
                 </MudSelect>
             </MudItem>
             <MudItem xs="12" md="4" lg="2">
-                <MudTextField @bind-Value="_model.CustomerNationalId"
+                <MudTextField Value="_model.CustomerNationalId"
+                              ValueChanged="OnCustomerNationalIdChanged"
                               Variant="Variant.Outlined"
                               Immediate="true"
+                              T="string"
+                              DebounceInterval="500"
+                              AutoFocus="true"
+                              For="@(() => _model.CustomerNationalId)"
                               Label="شناسه یکتا"
                               HelperText="کد ملی یا شناسه یکتای مشتری"
                               HelperTextOnFocus="true"
-                              Margin="Margin.Dense"></MudTextField>
+                              Margin="Margin.Dense" />
             </MudItem>
-            <MudItem xs="12" md="4" lg="2" Class="pt-lg-6 pt-md-6 pt-sm-0">
+            <MudItem xs="12" md="4" lg="4" Class="pt-lg-6 pt-md-6 pt-sm-0">
                 <MudTextField @bind-Value="_model.CustomerFullName"
                               Variant="Variant.Outlined"
                               Immediate="true"
@@ -43,16 +50,17 @@
             </MudItem>
 
             <!-- Gap for lg mode -->
-            <MudItem xs="0" md="0" lg="2" Class="d-none d-lg-block"></MudItem>
+            @* <MudItem xs="0" md="0" lg="2" Class="d-none d-lg-block"></MudItem> *@
 
             <!-- Second Group: CreditLimit and CreditLimitUnit -->
             <MudItem xs="12" md="6" lg="2" Class="pt-md-0 pt-lg-6">
                 <MudTextField Value="_model.CustomerCreditLimit"
+                              ValueChanged="OnCustomerCreditLimitChanged"
                               T="double?"
                               Immediate="true"
                               For="@(() => _model.CustomerCreditLimit)"
                               HelperTextOnFocus="true"
-                              HelperText="سقف اعتبار مشتری"
+                              HelperText="@_customerCreditLimitHelperText"
                               Label="سقف اعتبار"
                               Margin="Margin.Dense"
                               Variant="Variant.Outlined" />
@@ -60,6 +68,7 @@
             <MudItem xs="12" md="6" lg="2" Class="pt-md-0 pt-lg-6">
                 <MudSelect T="UnitType?"
                            Value="_model.CustomerCreditLimitUnit"
+                           ValueChanged="OnCustomerCreditLimitUnitChanged"
                            Label="واحد"
                            For="() => _model.CustomerCreditLimitUnit"
                            Margin="Margin.Dense"
@@ -151,7 +160,9 @@
                     </MudText>
                     <MudGrid>
                         <MudItem xs="12" md="4" lg="4">
-                            <MudTextField @bind-Value="_model.Credit"
+                            <MudTextField Value="_model.Credit"
+                                          ValueChanged="OnCreditChanged"
+                                          HelperText="@_creditHelperText"
                                           T="double?"
                                           Immediate="true"
                                           For="@(() => _model.Credit)"
@@ -162,6 +173,7 @@
                         <MudItem xs="12" md="4" lg="4">
                             <MudSelect T="UnitType?"
                                        Value="_model.CreditUnit"
+                                       ValueChanged="OnCreditUnitChanged"
                                        Label="واحد"
                                        For="() => _model.CreditUnit"
                                        Margin="Margin.Dense"
@@ -174,9 +186,11 @@
                             </MudSelect>
                         </MudItem>
                         <MudItem xs="12" md="4" lg="4">
-                            <MudTextField @bind-Value="_model.CreditRate"
+                            <MudTextField Value="_model.CreditRate"
+                                          ValueChanged="OnCreditRateChanged"
                                           T="double?"
                                           Immediate="true"
+                                          HelperText="@_creditRateHelperText"
                                           For="@(() => _model.CreditRate)"
                                           Label="نرخ تبدیل"
                                           Margin="Margin.Dense"
@@ -194,7 +208,9 @@
                     </MudText>
                     <MudGrid>
                         <MudItem xs="12" md="4" lg="4">
-                            <MudTextField @bind-Value="_model.Debit"
+                            <MudTextField Value="_model.Debit"
+                                          ValueChanged="OnDebitChanged"
+                                          HelperText="@_debitHelperText"
                                           T="double?"
                                           Immediate="true"
                                           For="@(() => _model.Debit)"
@@ -205,6 +221,7 @@
                         <MudItem xs="12" md="4" lg="4">
                             <MudSelect T="UnitType?"
                                        Value="_model.DebitUnit"
+                                       ValueChanged="OnDebitUnitChanged"
                                        Label="واحد"
                                        For="() => _model.DebitUnit"
                                        Margin="Margin.Dense"
@@ -217,7 +234,9 @@
                             </MudSelect>
                         </MudItem>
                         <MudItem xs="12" md="4" lg="4">
-                            <MudTextField @bind-Value="_model.DebitRate"
+                            <MudTextField Value="_model.DebitRate"
+                                          ValueChanged="OnDebitRateChanged"
+                                          HelperText="@_debitRateHelperText"
                                           T="double?"
                                           Immediate="true"
                                           For="@(() => _model.DebitRate)"
