Add transaction remove feature

--- a/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
@@ -44,11 +44,13 @@
                 <MudTabPanel Text="مشتریان" Icon="@Icons.Material.Filled.PeopleAlt">
                     <CustomersList Class="mt-2" Elevation="4" />
                 </MudTabPanel>
+                <MudTabPanel Text="اسناد حسابداری" Icon="@Icons.Material.Filled.DocumentScanner">
+                    <TransactionsList Class="mt-2" Elevation="4" />
+                </MudTabPanel>
                 <MudTabPanel Text="فاکتورهای من"></MudTabPanel>
                 <MudTabPanel Text="گزارش گیری"></MudTabPanel>
                 <MudTabPanel Text="اجناس فروخته شده"></MudTabPanel>
                 <MudTabPanel Text="لیست بدهی ها"></MudTabPanel>
-                <MudTabPanel Text="اسناد حسابداری"></MudTabPanel>
             </Authorized>
         </AuthorizeView>
     </MudTabs>
