--- a/src/App/Client/GoldEx.Client/_Imports.razor
+++ b/src/App/Client/GoldEx.Client/_Imports.razor
@@ -17,6 +17,7 @@
 @using GoldEx.Shared.Routings
 @using GoldEx.Sdk.Common
 @using GoldEx.Client.Pages.Products.Components
+@using GoldEx.Client.Pages.Transactions.ViewModels
 @using GoldEx.Client.Pages.Products.ViewModels
 @using GoldEx.Shared.Enums
 @using GoldEx.Client.Pages.Calculate.Components
