--- a/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Create.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Create.razor
@@ -1,8 +1,9 @@
 ﻿@inherits GoldExComponentBase
 
 <MudForm Model="_model" @ref="@_form" Validation="@(_transactionValidator.ValidateValue)" ValidationDelay="0">
-    <MudCard Elevation="4">
-        <MudCardContent>
+    <MudDialog>
+        <DialogContent>
+    
             <div class="d-flex align-center justify-content-between">
                 <MudText Typo="Typo.h6" GutterBottom="true">مشخصات مشتری</MudText>
                 @if (_model is { CustomerCreditRemaining: not null, CustomerCreditRemainingUnit: not null })
@@ -246,29 +247,34 @@
                     </MudPaper>
                 </MudItem>
             </MudGrid>
-        </MudCardContent>
-        <MudCardActions>
-            <div class="d-flex flex-fill p-2">
-                <MudButton Class="m-3"
-                           Color="Color.Primary"
-                           Disabled="@_processing"
-                           OnClick="@(async () => await OnSubmit())"
-                           Variant="Variant.Filled">
-                    @if (_processing)
-                    {
-                        <MudProgressCircular Class="ms-n1"
-                                             Size="Size.Small"
-                                             Indeterminate="true" />
-                        <MudText Class="ms-2">
-                            در حال ذخیره
-                        </MudText>
-                    }
-                    else
-                    {
-                        <MudText>ذخیره</MudText>
-                    }
-                </MudButton>
-            </div>
-        </MudCardActions>
-    </MudCard>
+
+        </DialogContent>
+        <DialogActions>
+            <MudButton Class="m-3"
+                       Color="Color.Error"
+                       OnClick="Close"
+                       Variant="Variant.Filled">
+                بستن
+            </MudButton>
+            <MudButton Class="m-3"
+                       Color="Color.Primary"
+                       Disabled="@_processing"
+                       OnClick="@(async () => await OnSubmit())"
+                       Variant="Variant.Filled">
+                @if (_processing)
+                {
+                    <MudProgressCircular Class="ms-n1"
+                                         Size="Size.Small"
+                                         Indeterminate="true" />
+                    <MudText Class="ms-2">
+                        در حال ذخیره
+                    </MudText>
+                }
+                else
+                {
+                    <MudText>ذخیره</MudText>
+                }
+            </MudButton>
+        </DialogActions>
+    </MudDialog>
 </MudForm>
