--- a/src/App/Client/GoldEx.Client/Pages/Customers/Components/CustomersList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Customers/Components/CustomersList.razor
@@ -29,6 +29,10 @@
         <MudTd DataLabel="شماره تماس">@context.PhoneNumber</MudTd>
         <MudTd DataLabel="عملیات">
             <div class="d-flex gap-2">
+                <MudTooltip Text="مشاهده تراکنش های مشتری">
+                    <MudIconButton Icon="@Icons.Material.Filled.DocumentScanner" Size="Size.Small" Variant="Variant.Filled"
+                                   Color="Color.Success" OnClick="_ => OnViewTransaction(context)"></MudIconButton>
+                </MudTooltip>
                 <MudTooltip Text="ویرایش">
                     <MudIconButton Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Variant="Variant.Filled"
                                    Color="Color.Primary" OnClick="_ => OnEdit(context)"></MudIconButton>
