Refactor transaction management and validation logic
Updated the `TransactionHttpClientService` to use the correct API endpoint for updating transactions. Replaced the `TransactionValidator` with `CreateTransactionValidator` and `UpdateTransactionValidator` for improved validation logic. Introduced `UpdateTransactionVm` to represent the view model for transaction updates. Expanded the `Update.razor` file to include a comprehensive form for editing transaction details and customer information. Enhanced the `OnSubmit` method for better error handling and state management, and integrated the `MudDialog` component for a user-friendly interface.

--- a/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Create.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Create.razor
@@ -1,6 +1,6 @@
 ﻿@inherits GoldExComponentBase
 
-<MudForm Model="_model" @ref="@_form" Validation="@(_transactionValidator.ValidateValue)" ValidationDelay="0">
+<MudForm Model="_model" @ref="@_form" Validation="@(_createTransactionValidator.ValidateValue)" ValidationDelay="0">
     <MudDialog>
         <DialogContent>
     
